--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-show-more",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "React component for truncating multi-line spans and adding an ellipsis",
-  "main": "lib/ShowMore.js",
+  "main": "src/ShowMore.js",
   "files": [
-    "lib"
+    "src"
   ],
   "scripts": {
     "compile": "babel ./src --out-dir ./lib",
